# NickDB

./: .gitignore  Dockerfile  README.md  docker_bash.sh
src/: CMakeLists.txt  client.c  client_context.c  cmake_install.cmake  db_hashtable.c  db_index.c  db_manager.c  db_operators.c  db_persist.c  parse.c  server.c  utils.c
src/cmake/: CompilerOptions.cmake
src/include/: client_context.h  common.h  db_hashtable.h  db_index.h  db_persist.h  main_api.h  message.h  parse.h  utils.h
tests/: prep_build.sh  run_test.sh  test_milestone.sh
tests/data_generation_scripts/: README.md  basic_scans.py  config.py  gen_all.sh  indexing.py  joins.py  multicore_scans.py  updates.py
